# MultiModalCrossAttn

./: README.md  example.py  pyproject.toml
cross_attn/: attend.py  flash.py  main.py
cross_attn/iters/: v1.py  v2.py
